mock edit and add swagger
