# controller/handle.js
@@ -2,7 +2,8 @@
 // const uri = "mongodb+srv://admin_user:wecode1234@wecode-o32ec.gcp.mongodb.net/RECORD?retryWrites=true&w=majority";
 // const client = new MongoClient(uri, { useNewUrlParser: true });
 //
-// var moment = require('moment');
+var moment = require('moment');
+// var date = moment().format("YYYY-MM-DD kk:mm:ss");
 
 var sql = require("mssql");
 // config for your database
@@ -23,37 +24,46 @@ if (err) console.log(err);
 
 
 class account{
+    // Deposit Money
     async deposit(body){
         var request = new sql.Request();
         var acc_no = body.account_no;
         var pwd = body.password;
         var amount = body.amount;
         var acc = await request.query(`SELECT password FROM pingDB.dbo.Bank_account WHERE account_no = '${acc_no}'`)
+        // เช็คว่ารหัสที่ใส่เข้ามาตรงกับใน DB มั้ย
         if(pwd != acc.recordset[0].password){
             var message = {
                 message: "รหัสผ่านไม่ถูกต้อง"
             }
-            return[403, message];
+            console.log(`[Deposit Money] ${moment().format("YYYY-MM-DD kk:mm:ss")} : Wrong Password`)
+            return[403, message]; // 403: client does not have access
         }
+        // ใส่เงินมาน้อยกว่า 100 บาท
         if(amount < 100){
             message = {
                 message: "กรุณาฝากเงิน 100 บาท ขึ้นไป"
             }
-            return[400, message];
+            console.log(`[Deposit Money] ${moment().format("YYYY-MM-DD kk:mm:ss")} : Please deposit more than 100 baht`)
+            return[400, message]; // 400: Bad Request
         }
+        // ใส่จำนวนเงินที่เป็นรูปแบบเหรียญ ex.1,522 (ต้องเป็นหลักร้อยขึ้นไป)
         if(amount%100 != 0){
             message =  {
-                message: "ไม่สามารถฝากเงินที่เป็นรูปแบบเหรียญได้ กรุณใส่จำนวนเงินในรูปแบบธนบัตร 100 บาท ขึ้นไป"
+                message: "ไม่สามารถฝากเงินที่เป็นรูปแบบเหรียญได้ กรุณาใส่จำนวนเงินในรูปแบบธนบัตร 100 บาท ขึ้นไป"
             }
-            return[400, message]
+            console.log(`[Deposit Money] ${moment().format("YYYY-MM-DD kk:mm:ss")} : Please deposit money in form of 100 baht bill or more`)
+            return[400, message] // 400: Bad Request
         }
+        // Update เงินใน DB อันเก่า - ที่ฝากเข้ามา
         await request.query(`UPDATE pingDB.dbo.Bank_account
         SET account_balance = account_balance + ${amount}
         WHERE account_no = '${acc_no}'`);
         message = {
             message: "ฝากเงินเรียบร้อย"
         }
-        return[200, message]
+        console.log(`[Deposit Money] ${moment().format("YYYY-MM-DD kk:mm:ss")} : Deposit Success`)
+        return[200, message]; // 200: OK
     }
 
     async withdraw(body){
@@ -62,31 +72,39 @@ class account{
         var pwd = body.password;
         var amount = body.amount;
         var acc = await request.query(`SELECT password, account_balance FROM pingDB.dbo.Bank_account WHERE account_no = '${acc_no}'`)
+        // เช็คว่ารหัสที่ใส่เข้ามาตรงกับใน DB มั้ย
         if(pwd != acc.recordset[0].password){
             var message = {
                 message: "รหัสผ่านไม่ถูกต้อง"
             }
-            return[403, message];
+            console.log(`[Withdraw Money] ${moment().format("YYYY-MM-DD kk:mm:ss")} : Wrong Password`)
+            return[403, message]; // 403: client does not have access
         }
+        // ใส่เงินมาเกิน 20,000 บาท หรือ เกินจำนวนเงินในบัญชี
         if(amount > 20000 || amount > acc.recordset[0].account_balance){
             message = {
                 message: "กรุณาถอนเงินไม่เกินจำนวนเงินที่คงเหลือในบัญชี หรือ ไม่เกินครั้งละ 20,000 บาท"
             }
-            return[400, message];
+            console.log(`[Withdraw Money] ${moment().format("YYYY-MM-DD kk:mm:ss")} : Please withdraw money not more than account balance or 20,000 baht`)
+            return[400, message]; // 400: Bad Request
         }
+        // ใส่จำนวนเงินที่เป็นรูปแบบเหรียญ ex.1,522 (ต้องเป็นหลักร้อยขึ้นไป)
         if(amount%100 != 0){
             message =  {
-                message: "ไม่สามารถถอนเงินที่เป็นรูปแบบเหรียญได้ กรุณใส่จำนวนเงินในรูปแบบธนบัตร 100 บาท ขึ้นไป"
+                message: "ไม่สามารถถอนเงินที่เป็นรูปแบบเหรียญได้ กรุณาใส่จำนวนเงินในรูปแบบธนบัตร 100 บาท ขึ้นไป"
             }
-            return[400, message]
+            console.log(`[Withdraw Money] ${moment().format("YYYY-MM-DD kk:mm:ss")} : Please withdraw money in form of 100 baht bill or more`)
+            return[400, message]; // 400: Bad Request
         }
+        // Update เงินใน DB อันเก่า - ที่ถอนไป
         await request.query(`UPDATE pingDB.dbo.Bank_account
         SET account_balance = account_balance - ${amount}
         WHERE account_no = '${acc_no}'`);
         message = {
             message: "ถอนเงินเรียบร้อย"
         }
-        return[200, message]
+        console.log(`[Withdraw Money] ${moment().format("YYYY-MM-DD kk:mm:ss")} : Withdraw Success`)
+        return[200, message]; // 200: OK
     }
 
     async transfer(body){
@@ -96,17 +114,21 @@ class account{
         var acc_to = body.to_account;
         var amount = body.amount;
         var acc = await request.query(`SELECT password, account_balance FROM pingDB.dbo.Bank_account WHERE account_no = '${acc_from}'`)
+        // เช็คว่ารหัสที่ใส่เข้ามาตรงกับใน DB มั้ย
         if(pwd != acc.recordset[0].password){
             var message = {
                 message: "รหัสผ่านไม่ถูกต้อง"
             }
-            return[403, message];
+            console.log(`[Transfer Money] ${moment().format("YYYY-MM-DD kk:mm:ss")} : Wrong Password`)
+            return[403, message]; // 403: client does not have access
         }
+        // ใส่เงินมาเกิน 1,000,000 บาท หรือ เกินจำนวนเงินในบัญชี
         if(amount > 1000000 || amount > acc.recordset[0].account_balance){
             message = {
                 message: "กรุณาโอนเงินไม่เกินจำนวนเงินที่คงเหลือในบัญชี หรือ ไม่เกินครั้งละ 1,000,000 บาท"
             }
-            return[400, message];
+            console.log(`[Transfer Money] ${moment().format("YYYY-MM-DD kk:mm:ss")} : Please transfer money not more than account balance or 1,000,000 baht`)
+            return[400, message]; // 400: Bad Request
         }
         await request.query(`UPDATE pingDB.dbo.Bank_account
         SET account_balance = account_balance - ${amount}
@@ -117,7 +139,8 @@ class account{
         message = {
             message: "โอนเงินเรียบร้อย"
         }
-        return[200, message]
+        console.log(`[Transfer Money] ${moment().format("YYYY-MM-DD kk:mm:ss")} : Transfer Success`)
+        return[200, message]; // 200: OK
     }
 
     async checkBalance(body){
@@ -125,18 +148,19 @@ class account{
         var acc_no = body.account_no;
         var pwd = body.password;
         var acc = await request.query(`SELECT password, account_balance FROM pingDB.dbo.Bank_account WHERE account_no = '${acc_no}'`)
-        // console.log(acc);
+        // เช็คว่ารหัสที่ใส่เข้ามาตรงกับใน DB มั้ย
         if(pwd != acc.recordset[0].password){
             var message = {
                 message: "รหัสผ่านไม่ถูกต้อง"
             }
-            return[403, message];
+            console.log(`[Check Account Balance] ${moment().format("YYYY-MM-DD kk:mm:ss")} : Wrong Password`)
+            return[403, message]; // 403: client does not have access
         }
         message = {
             balance: acc.recordset[0].account_balance
         }
-
-        return[200, message]
+        console.log(`[Check Account Balance] ${moment().format("YYYY-MM-DD kk:mm:ss")} : Check Balance Success`)
+        return[200, message]; // 200: OK
     }
 
 }
